# bandsintao

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  unittest.cfg
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
bandsintao/: __init__.py  client.py  jjson.py
bandsintownkwondo/: response.py
requirements/: default.txt  test.txt
tests/: test_models.py
tests/data/: README.markdown
tests/data/Judah & The Lion/: artist.html  artist.json  upcoming.json
tests/data/Judah&TheLion/: artist.json
tests/data/Kings of Leon/: artist.html  artist.json  upcoming.json
tests/data/KingsofLeon/: artist.html  upcoming.json
tests/data/Lil Wayne/: artist.html  artist.json
tests/data/LilWayne/: artist.html
tests/data/Metallica/: artist.html  artist.json  upcoming.json
tests/data/Red Hot Chili Peppers/: artist.html  artist.json
tests/data/RedHotChiliPeppers/: upcoming.json
tests/data/Skrillex/: artist.html  artist.json  upcoming.json
tests/data/Tiësto/: artist.html  artist.json  upcoming.json
tests/data/Ty Dolla $ign/: artist.html  artist.json  upcoming.json
tests/data/TyDolla$ign/: artist.html
