[flake8]
exclude = .git,.tox
# ignore = E265,E262,E731,F405,W601
max-line-length = 200

[isort]
add_import = from __future__ import unicode_literals
import_heading_future = coding=utf-8
line_length = 80
known_future_library = future
known_first_party = bandsintao
indent = 4
multi_line_output = 3
skip = migrations,napi,dajax
include_trailing_comma = 1
force_grid_wrap = 1
combine_as_imports = 1
not_skip = __init__.py

[metadata]
license-file = LICENSE

[wheel]
universal = 1
